k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: default
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      # Block automatic K8s API token injection inside containers
      automountServiceAccountToken: false

      # Pod Security Context: non-root user "node"
      securityContext:
        seccompProfile:
          type: RuntimeDefault   # Restricts host kernel syscalls
        runAsNonRoot: true
        runAsUser: 1000
      containers:
        - name: backends
          image: beatricebalzarini/fcc-backend:v4.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
          
          # Container Security Hardening
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          # Mount secret volume into container (In-Memory /tmpfs)
          volumeMounts:
            - name: db-secret-volume
              mountPath: "/etc/secrets"
              readOnly: true

          # Load ONLY non-sensitive configuration variables from ConfigMap
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          # Health Probes pointing to /health on port 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5

      # Volume definition linking directly to Kubernetes Secret 'db-secret'
      volumes:
        - name: db-secret-volume
          secret:
            secretName: db-secret
